Add more pages and re-arrange

--- a/bugs.html
+++ b/bugs.html
@@ -14,7 +14,7 @@
         Number</a
       >
       <div class="header-right">
-        <a href="bugs">Request ID for Bugs</a>
+        <a href="bugs" class="active">Request ID for Bugs</a>
         <a href="features">Request ID for Features</a>
         <a href="vulnerabilities">Request ID for Vulnerabilities</a>
         <a
