--- a/index copy 2.html
+++ b/index copy 2.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bugs, features, and vulnerabilities dictionary</title>
     <link rel="shortcut icon" href="logo.png" type="image/x-icon" />
-    <link rel="stylesheet" href="assets/css/head.css" />
+    <link rel="stylesheet" href="head.css" />
   </head>
   <body>
     <header class="header">
-      <a href="/bo-feat-vuln-num" class="logo"
+      <a href="" class="logo"
         ><img class="logo" src="logo.png" alt="Huto Logo" /> B/O Feat Vuln
         Number</a
       >
@@ -21,7 +21,7 @@
           href="//github.com/Hutoorg/bo-feat-vuln-num/discussions/categories/announcements"
           >Announcements</a
         >
-        <a href="/contact-us">Contact</a>
+        <a href="//hutoorg.github.io/contact-us">Contact</a>
       </div>
     </header>
     <div class="homepage"></div>
